feat: 更新v0.8设计文档
- 架构设计：Skill JSON Schema、仓库验证方案、AIAgent实现、简化监控
- 产品需求：国际化设计、积分系统
- 原型设计：双模式支付、CLI命令更新
- 场景设计：仓库提交流程、AIAgent场景
- 新增develop/目录（开发规范）
- 新增progress/目录（进度总结）

--- a/design/产品需求规格说明书_v0.8.md
+++ b/design/产品需求规格说明书_v0.8.md
@@ -1,3 +1,5 @@
+# AI Project Management Platform - 产品需求规格说明书 v0.8
+
 ## 一、核心定位
 
 ### 1.1 产品愿景
@@ -52,12 +54,14 @@
 产品核心原则：
 ├─ 1. Skill是参与者的核心资产              → 经验封装，可复用
 ├─ 2. 参与者自由选择AI工具               → Claude/Cursor/Codex
-├─ 3. 平台只验收成果，不关心过程         → 不看Token消耗
-├─ 4. 发起人只看验收标准是否达标         → 不管用什么模型
-├─ 5. Skill可集成到AI工具                → MCP Protocol
-├─ 6. 社区可复用优秀Skill               → 经验沉淀和分享
-├─ 7. 平台只防破坏，不判断好坏           → 没有权威，只有历史
-└─ 8. 初始信用解决冷启动                 → 开源Skill防作弊
+├─ 3. 平台只验收成果，不关心过程           → 不看Token消耗
+├─ 4. 发起人只看验收标准是否达标           → 不管用什么模型
+├─ 5. Skill基于模型能力运行                → 直接在AI中使用
+├─ 6. 社区可复用优秀Skill                 → 经验沉淀和分享
+├─ 7. 平台只防破坏，不判断好坏             → 没有权威，只有历史
+├─ 8. 发起人可修改验收结果                 → 保留最终决定权
+├─ 9. 双模式支付系统                       → 社区USDT/企业积分
+└─ 10. AIAgent解决冷启动                   → 模拟社区运行
 ```
 
 ### 1.4 两种使用方式
@@ -67,8 +71,44 @@
 | **发起** | 任何人可发起 | 内部成员可发起 |
 | **参与** | 开放参与 | 内部成员参与 |
 | **可见性** | 公开项目 | 私有项目 |
-| **收益** | 现金分成 | 积分统计 |
+| **收益** | USDT到账 | 积分统计 |
 | **抽成** | 平台5% | 平台3% |
+| **充值** | USDT-TRC20钱包 | 企业后台配置 |
+| **结算** | 实时到账 | 定期汇总导出 |
+| **提现** | 支持（USDT） | 不支持 |
+
+### 1.5 社区模式：USDT-TRC20
+
+**推荐理由**：
+- 接入简单：只需一个钱包地址
+- 无资质要求：不需要企业营业执照
+- 全球可用：中国/海外都能用
+- 透明可查：链上记录防止抵赖
+- 手续费低：TRC20网络几美分
+
+**流程**：
+```
+发起人充值USDT → 平台托管 → 任务完成结算USDT → 参与者提现
+```
+
+### 1.6 企业模式：纯积分
+
+**特点**：
+- 不需要真实货币流转
+- 积分由企业后台配置
+- 支持自定义积分兑换规则（如：100积分=1小时休假）
+
+**企业积分配置示例**：
+```typescript
+{
+  pointPerTask: 100,      // 每完成任务获得100积分
+  pointPerReview: 10,     // 每验收一次获得10积分
+  exchangeRules: [         // 兑换规则
+    { unit: "休假小时", value: 1, points: 100 },
+    { unit: "现金元", value: 100, points: 1000 }
+  ]
+}
+```
 
 ---
 
@@ -883,7 +923,197 @@ Step 4：信用记录
 
 ---
 
-## 十、v0.8关键改进点
+## 九、AIAgent冷启动模拟（v0.8新增）
+
+### 9.1 冷启动问题
+
+```
+新平台面临的困境：
+├─ 没有用户 → 没有项目
+├─ 没有项目 → 没有参与者
+├─ 没有参与者 → 没有人做任务
+└─ 恶性循环
+
+解决方案：AIAgent模拟社区运行
+```
+
+### 9.2 AIAgent模拟角色
+
+| 角色 | 行为 | 配置 |
+|------|------|------|
+| **模拟发起人** | 定期发布项目、设置预算、按时验收 | 每天3-5个项目，预算¥500-5000/任务 |
+| **模拟参与者** | 认领任务、使用Skill完成交付 | 每天2-3个任务，完成率>90% |
+| **模拟评价者** | 对Skill给予评价、提出建议 | 每天10-20个Skill评价 |
+
+### 9.3 AIAgent运行阶段
+
+```
+阶段1：种子期（第1-2周）
+├─ AIAgent主导：发布80%项目，认领70%任务
+├─ 真实用户：发布20%项目，认领30%任务
+└─ 目标：积累种子用户和项目
+
+阶段2：成长期（第3-4周）
+├─ AIAgent辅助：发布50%项目，认领50%任务
+├─ 真实用户：发布50%项目，认领50%任务
+└─ 目标：社区开始自运转
+
+阶段3：成熟期（第5周起）
+├─ AIAgent观察：仅处理异常情况
+├─ 真实用户：发布90%+项目，认领90%+任务
+└─ 目标：社区完全自运转
+```
+
+### 9.4 发起人可修改验收结果
+
+```
+验收流程优化：
+1. 参与者提交成果 → 2. 调用验收Skill → 3. Skill返回评估
+                                            │
+                                            ▼
+4. 发起人确认 ─────────────────────────── 最终验收结果
+     │
+     ├── 接受Skill评估 → 验收通过
+     └── 修改评估结果 → 验收通过（发起人保留最终决定权）
+
+效果：Skill提供客观评估，发起人保留最终决定权
+
+---
+
+## 十、国际化设计（v0.8新增）
+
+### 10.1 支持语言
+
+| 语言 | 区域 | 状态 |
+|------|------|------|
+| **中文** | zh-CN | ✅ 支持 |
+| **English** | en-US | ✅ 支持 |
+
+### 10.2 国际化架构
+
+```
+前端国际化：
+├─ vue-i18n v9（Vue 3官方国际化插件）
+├─ 语言包目录：/locales/
+│  ├─ zh-CN.json
+│  └─ en-US.json
+└─ 动态切换，无需刷新页面
+
+切换方式：
+├─ 顶部导航栏：🌐 EN/中文 ▼
+├─ 用户设置页
+└─ URL参数：?lang=en（可选）
+```
+
+### 10.3 翻译内容
+
+| 模块 | 需翻译内容 | 优先级 |
+|------|-----------|--------|
+| **导航** | 首页、项目、任务、Skill、个人中心 | P0 |
+| **项目** | 项目列表、项目详情、发布项目 | P0 |
+| **任务** | 任务大厅、任务详情、提交完成 | P0 |
+| **Skill** | Skill市场、创建Skill、Skill详情 | P0 |
+| **结算** | 预算、抽成、结算记录 | P1 |
+| **设置** | 账户设置、语言切换 | P1 |
+
+### 10.4 语言包示例
+
+```json
+// locales/zh-CN.json
+{
+  "nav": {
+    "home": "首页",
+    "projects": "项目",
+    "tasks": "任务大厅",
+    "skills": "Skill市场",
+    "profile": "个人中心"
+  },
+  "project": {
+    "create": "发布项目",
+    "list": "项目列表",
+    "budget": "预算",
+    "milestones": "环节"
+  },
+  "task": {
+    "claim": "认领任务",
+    "submit": "标记完成",
+    "review": "验收"
+  },
+  "common": {
+    "submit": "提交",
+    "cancel": "取消",
+    "confirm": "确认",
+    "language": "语言"
+  }
+}
+
+// locales/en-US.json
+{
+  "nav": {
+    "home": "Home",
+    "projects": "Projects",
+    "tasks": "Task Hall",
+    "skills": "Skill Market",
+    "profile": "Profile"
+  },
+  "project": {
+    "create": "Create Project",
+    "list": "Project List",
+    "budget": "Budget",
+    "milestones": "Milestones"
+  },
+  "task": {
+    "claim": "Claim Task",
+    "submit": "Mark Complete",
+    "review": "Review"
+  },
+  "common": {
+    "submit": "Submit",
+    "cancel": "Cancel",
+    "confirm": "Confirm",
+    "language": "Language"
+  }
+}
+```
+
+### 10.5 切换UI设计
+
+```
+顶部导航栏：
+
+┌─────────────────────────────────────────────────────────────────┐
+│  🏠          项目    任务大厅    Skill市场           [🌐 EN ▼] │
+└─────────────────────────────────────────────────────────────────┘
+                    ↑
+                    语言切换下拉框
+
+下拉选项：
+┌─────────────────┐
+│ 🌐 English      │
+│ 中文            │
+└─────────────────┘
+
+选择后立即切换，无页面刷新
+```
+
+### 10.6 默认语言策略
+
+```
+首次访问：
+├─ 读取浏览器语言设置
+│  ├─ zh-CN → 默认中文
+│  ├─ en-US → 默认英文
+│  └─ 其他 → 默认英文
+└─ 用户可随时手动切换
+
+记住选择：
+├─ 存储在localStorage
+└─ 后续访问自动应用
+```
+
+---
+
+## 十一、v0.8关键改进点
 
 | # | 改进项 | v0.7状态 | v0.8改进 |
 |---|--------|---------|----------|
@@ -892,11 +1122,15 @@ Step 4：信用记录
 | 3 | 防作弊机制 | 粗略 | 详细设计（技能测试/作品集/同行评议） |
 | 4 | 争议仲裁 | 未提及 | 新增完整仲裁流程 |
 | 5 | 信用公式 | 粗略 | 明确：最终信用=初始×衰减+长期 |
+| 6 | Skill集成 | MCP Protocol | 改为基于模型能力直接运行 |
+| 7 | 支付系统 | 未提及 | 社区USDT-TRC20 / 企业积分双模式 |
+| 8 | AIAgent | 未提及 | 新增冷启动模拟方案 |
+| 9 | 验收结果 | 依赖Skill | 发起人可修改验收结果 |
 
 ---
 
 **文档版本**: v0.8
-**更新日期**: 2026-02-18
+**更新日期**: 2026-02-19
 **核心原则**：优秀的人的经验以Skill方式用于项目各环节
 
 
