--- a/design/原型设计文档_v0.8.md
+++ b/design/原型设计文档_v0.8.md
@@ -1,6 +1,6 @@
-# AI Project Management Platform - 原型设计文档 v0.7
+# AI Project Management Platform - 原型设计文档 v0.8
 
-> **版本说明**：基于v0.7需求规格设计的原型，涵盖MVP核心页面和交互流程  
+> **版本说明**：基于v0.8需求规格设计的原型，涵盖MVP核心页面和交互流程  
 > **核心原则**：优秀的人的经验以Skill方式用于项目各环节
 
 ---
@@ -16,7 +16,7 @@
 ├─ Skill是参与者的核心资产
 ├─ 参与者自由选择AI工具（Claude/Cursor/Codex）
 ├─ 平台只验收成果，不关心过程
-├─ Skill可集成到AI工具（MCP Protocol）
+├─ Skill基于模型能力运行（无需MCP）
 └─ 社区可复用优秀Skill
 ```
 
@@ -47,7 +47,7 @@
 │              ▼                    ▼                    ▼                │
 │  ┌─────────────────┐  ┌─────────────────┐  ┌─────────────────┐        │
 │  │   Claude         │  │   Cursor        │  │   Codex/OpenCode│        │
-│  │   (MCP集成)     │  │   (MCP集成)    │  │   (MCP集成)    │        │
+│  │   (基于模型)     │  │   (基于模型)    │  │   (基于模型)    │        │
 │  └─────────────────┘  └─────────────────┘  └─────────────────┘        │
 │                                                                             │
 └─────────────────────────────────────────────────────────────────────────────┘
@@ -61,21 +61,21 @@ CLI客户端功能：
 │  ├─ aipm task list              # 列出可认领任务
 │  ├─ aipm task claim <id>       # 认领任务
 │  ├─ aipm task pull             # 同步任务到本地
-│  └─ aipm task submit           # 提交成果
+│  └─ aipm task submit           # 标记任务完成（附仓库地址）
 │
 ├─ Skill管理
 │  ├─ aipm skill list            # 列出我的Skill
 │  ├─ aipm skill create          # 创建Skill
-│  ├─ aipm skill export <id>     # 导出为MCP格式
+│  ├─ aipm skill export <id>     # 导出Prompt模板
 │  └─ aipm skill import <file>   # 导入Skill
 │
 ├─ 项目管理
-│  ├─ aipm project list          # 列出我的项目
+│  ├─ aipm project list           # 列出我的项目
 │  └─ aipm project info <id>     # 项目详情
 │
 └─ 验收查询
-   ├─ aipm review status         # 查看验收状态
-   └─ aipm review result         # 查看验收结果
+   ├─ aipm review status          # 查看验收状态
+   └─ aipm review result          # 查看验收结果
 ```
 
 ---
@@ -86,7 +86,7 @@ CLI客户端功能：
 
 ```
 ┌─────────────────────────────────────────────────────────────────────────────┐
-│ AI Project Management Platform                                      [登录/注册] │
+│ AI Project Management Platform                              [🌐 EN/中文 ▼] │
 ├─────────────────────────────────────────────────────────────────────────────┤
 │                                                                             │
 │  ┌─────────────────────────────────────────────────────────────────────┐   │
@@ -801,47 +801,195 @@ P2（可以有）：
 
 ---
 
-## 七、v0.8更新说明
+## 八、双模式支付原型（v0.8新增）
 
-### 7.1 新增页面原型
-
-| 页面 | 说明 |
-|------|------|
-| **2.4a 争议仲裁页面** | 展示争议详情、证据、仲裁结果 |
-| **2.6 个人档案（更新）** | 添加初始信用、长期信用、信用历史展示 |
-
-### 7.2 更新页面原型
-
-| 页面 | 更新内容 |
-|------|---------|
-| **2.4 验收管理** | 添加抽成展示、争议列表入口 |
-| **2.6 个人档案** | 添加完整信用体系展示 |
-
-### 7.3 v0.8新增UI元素
+### 8.1 社区模式：USDT支付
 
 ```
-信用展示UI：
-├─ 最终信用分数（大字体突出显示）
-├─ 初始信用分解（技能测试/作品集/同行评议）
-├─ 长期信用分解（项目数/成功率/好评率）
-├─ 信用权重说明（初始/长期权重）
-├─ 有效期倒计时
-└─ 信用历史列表（最近5条）
+┌─────────────────────────────────────────────────────────────────────────────┐
+│ 任务大厅（社区模式）                                                  │
+├─────────────────────────────────────────────────────────────────────────────┤
+│                                                                             │
+│  搜索任务                                                               │
+│  [全部类型 ▼] [排序：最新 ▼] [筛选：全部 ▼]                            │
+│                                                                             │
+│  ┌─────────────────────────────────────────────────────────────────────┐   │
+│  │ 📌 环节1：用户认证API开发                     🏷️ Python/FastAPI │   │
+│  │     预算：$1,500 USDT ⭐热门                                       │   │
+│  │     预计分成：$1,425 USDT (扣除5%)                                │   │
+│  │     专长要求：Python, FastAPI                                     │   │
+│  │     截止时间：2026-02-25                                          │   │
+│  │                                                                    │   │
+│  │ 发起人：⭐⭐⭐⭐⭐ (信用: 92)                    [查看详情]       │   │
+│  └─────────────────────────────────────────────────────────────────────┘   │
+│                                                                             │
+│  ┌─────────────────────────────────────────────────────────────────────┐   │
+│  │ 📌 环节2：前端界面开发                       🏷️ React/TypeScript │   │
+│  │     预算：$2,000 USDT                                             │   │
+│  │     预计分成：$1,900 USDT (扣除5%)                                │   │
+│  │     ...                                                           │   │
+│  └─────────────────────────────────────────────────────────────────────┘   │
+│                                                                             │
+└─────────────────────────────────────────────────────────────────────────────┘
+```
 
-抽成展示UI：
-├─ 预算金额
-├─ 平台抽成（百分比+金额）
-├─ 参与者可得（净额）
-└─ 抽成说明链接
+### 8.2 企业模式：积分支付
 
-争议列表UI：
-├─ 争议数量提示
-├─ 争议状态标签
-└─ 查看争议入口
+```
+┌─────────────────────────────────────────────────────────────────────────────┐
+│ 任务大厅（企业模式）                                                  │
+├─────────────────────────────────────────────────────────────────────────────┤
+│                                                                             │
+│  搜索任务                                                               │
+│  [全部类型 ▼] [排序：最新 ▼] [筛选：全部 ▼]                            │
+│                                                                             │
+│  ┌─────────────────────────────────────────────────────────────────────┐   │
+│  │ 📌 环节1：用户认证API开发                     🏷️ Python/FastAPI │   │
+│  │     预算：1,500 积分 💼 企业内部                                    │   │
+│  │     预计分成：1,425 积分 (扣除5%)                                 │   │
+│  │     专长要求：Python, FastAPI                                     │   │
+│  │     截止时间：2026-02-25                                          │   │
+│  │                                                                    │   │
+│  │ 发起人：技术总监                              [查看详情]             │   │
+│  │                                                                    │   │
+│  │ 💡 100积分 = 1小时休假 = 100元奖金（企业自定义）                │   │
+│  └─────────────────────────────────────────────────────────────────────┘   │
+│                                                                             │
+└─────────────────────────────────────────────────────────────────────────────┘
+```
+
+### 8.3 USDT充值页面
+
+```
+┌─────────────────────────────────────────────────────────────────────────────┐
+│ USDT充值（社区模式）                                                  │
+├─────────────────────────────────────────────────────────────────────────────┤
+│                                                                             │
+│  当前余额：500 USDT                                                     │
+│                                                                             │
+│  ┌─────────────────────────────────────────────────────────────────────┐   │
+│  │  充值金额：                                              [ 1000  ]  │   │
+│  │  转换为：                                            100,000 积分  │   │
+│  │                                                                    │   │
+│  │  预计到账：100,000 积分                                        │   │
+│  │  手续费：0 USDT (TRC20网络)                                    │   │
+│  └─────────────────────────────────────────────────────────────────────┘   │
+│                                                                             │
+│  ┌─────────────────────────────────────────────────────────────────────┐   │
+│  │  充值说明：                                                       │   │
+│  │  ├─ 1 USDT = 100 积分                                            │   │
+│  │  ├─ 支持TRC20网络（USDT充值地址）：                              │   │
+│  │  │  TAdrXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX                       │   │
+│  │  ├─ 最小充值：10 USDT                                            │   │
+│  │  └─ 到账时间：1-5分钟                                            │   │
+│  └─────────────────────────────────────────────────────────────────────┘   │
+│                                                                             │
+│                                              [ 立即充值 ]                  │
+│                                                                             │
+└─────────────────────────────────────────────────────────────────────────────┘
+```
+
+### 8.4 积分配置页面（企业模式）
+
+```
+┌─────────────────────────────────────────────────────────────────────────────┐
+│ 企业积分配置                                                            │
+├─────────────────────────────────────────────────────────────────────────────┤
+│                                                                             │
+│  基础配置                                                               │
+│  ┌─────────────────────────────────────────────────────────────────────┐   │
+│  │  每完成任务获得积分：                                    [ 100  ]  │   │
+│  │  每验收一次获得积分：                                     [  10  ]  │   │
+│  └─────────────────────────────────────────────────────────────────────┘   │
+│                                                                             │
+│  积分兑换规则                                                           │
+│  ┌─────────────────────────────────────────────────────────────────────┐   │
+│  │  ┌───────────────────────────────────────────────────────────────┐  │   │
+│  │  │ 💰 休假兑换                                                   │  │   │
+│  │  │  100 积分 = 1 小时休假                              [编辑]    │  │   │
+│  │  └───────────────────────────────────────────────────────────────┘  │   │
+│  │                                                                    │   │
+│  │  ┌───────────────────────────────────────────────────────────────┐  │   │
+│  │  │ 💵 现金兑换                                                   │  │   │
+│  │  │  1,000 积分 = 100 元人民币                          [编辑]    │  │   │
+│  │  └───────────────────────────────────────────────────────────────┘  │   │
+│  │                                                                    │   │
+│  │  [+ 添加兑换规则]                                                │   │
+│  └─────────────────────────────────────────────────────────────────────┘   │
+│                                                                             │
+│                                              [ 保存配置 ]                  │
+│                                                                             │
+└─────────────────────────────────────────────────────────────────────────────┘
+```
+
+### 8.5 结算页面（双模式）
+
+```
+┌─────────────────────────────────────────────────────────────────────────────┐
+│ 验收通过 - 结算完成                                                    │
+├─────────────────────────────────────────────────────────────────────────────┤
+│                                                                             │
+│  ✅ 验收通过                                                            │
+│                                                                             │
+│  结算详情（社区模式）：                                                 │
+│  ┌─────────────────────────────────────────────────────────────────────┐   │
+│  │  项目：AI代码审查工具                                             │   │
+│  │  环节：用户认证API开发                                            │   │
+│  │  负责人：王五                                                     │   │
+│  │  贡献比例：35%                                                   │   │
+│  │  ────────────────────────────────────────────                      │   │
+│  │  预算金额：$3,000 USDT                                          │   │
+│  │  平台抽成：$150 USDT (5%)                                       │   │
+│  │  结算净额：$997.50 USDT                                         │   │
+│  │  ────────────────────────────────────────────                      │   │
+│  │  您的余额：1,500 USDT → 2,497.50 USDT                          │   │
+│  └─────────────────────────────────────────────────────────────────────┘   │
+│                                                                             │
+│  💰 支付成功 - $997.50 USDT已转入您的账户                             │
+│                                                                             │
+│  结算详情（企业模式）：                                                 │
+│  ┌─────────────────────────────────────────────────────────────────────┐   │
+│  │  项目：AI代码审查工具                                             │   │
+│  │  环节：用户认证API开发                                            │   │
+│  │  负责人：王五                                                     │   │
+│  │  贡献比例：35%                                                   │   │
+│  │  ────────────────────────────────────────────                      │   │
+│  │  预算积分：15,000 积分                                           │   │
+│  │  平台抽成：750 积分 (5%)                                         │   │
+│  │  结算净额：5,000 积分                                            │   │
+│  │  ────────────────────────────────────────────                      │   │
+│  │  您的积分：2,000 → 7,000 积分                                    │   │
+│  └─────────────────────────────────────────────────────────────────────┘   │
+│                                                                             │
+│  ✅ 积分已累计到您的账户                                               │
+│                                                                             │
+└─────────────────────────────────────────────────────────────────────────────┘
 ```
 
 ---
 
+## 九、v0.8更新说明
+
+### 9.1 新增页面原型
+
+| 页面 | 说明 |
+|------|------|
+| **8.1 社区模式任务大厅** | USDT预算和分成展示 |
+| **8.2 企业模式任务大厅** | 积分预算和企业标识 |
+| **8.3 USDT充值页面** | TRC20充值和积分转换 |
+| **8.4 积分配置页面** | 企业积分规则配置 |
+| **8.5 结算页面（双模式）** | 展示USDT和积分两种结算 |
+
+### 9.2 更新内容
+
+| 模块 | 更新内容 |
+|------|---------|
+| **MCP移除** | 更新所有MCP相关描述，改为基于模型能力运行 |
+| **支付系统** | 新增双模式支付原型 |
+| **AIAgent** | 新增冷启动模拟配置页面（待设计） |
+
+---
+
 **文档版本**: v0.8
-**更新日期**: 2026-02-18
+**更新日期**: 2026-02-19
 **核心原则**：优秀的人的经验以Skill方式用于项目各环节
