--- a/design/场景设计文档_v0.8.md
+++ b/design/场景设计文档_v0.8.md
@@ -1,6 +1,6 @@
 # AI Project Management Platform - 场景设计文档 v0.8
 
-> **版本说明**：基于v0.7逻辑闭环验证，新增争议仲裁和成本控制场景  
+> **版本说明**：基于v0.8需求设计，展示核心使用场景
 > **核心原则**：优秀的人的经验以Skill方式用于项目各环节
 
 ---
@@ -129,7 +129,7 @@
 │ │ │ 标签：[Python, FastAPI, RESTful]                        │  │   │
 │ │ │ 描述：快速开发高质量RESTful API                         │  │   │
 │ │ │                                                            │  │   │
-│ │ │ [查看详情]  [导入Skill]  [收藏]                        │  │   │
+│ │ │ [查看详情]  [复制Prompt]  [收藏]                        │  │   │
 │ │ └───────────────────────────────────────────────────────────────┘  │   │
 │ └─────────────────────────────────────────────────────────────────────┘   │
 │                                                                            │
@@ -137,16 +137,22 @@
                                     │
                                     ▼
 ┌─────────────────────────────────────────────────────────────────────────────┐
-│ 步骤 2：导出为MCP格式                                              │
+│ 步骤 2：在AI工具中使用Skill                                           │
 ├─────────────────────────────────────────────────────────────────────────────┤
 │                                                                            │
-│ MCP导出：                                                           │
+│ Skill使用：                                                          │
 │ ┌─────────────────────────────────────────────────────────────────────┐   │
-│ │ ✅ 已导出为MCP格式                                                  │   │
+│ │ ✅ Skill已准备就绪                                                  │   │
 │ │                                                                    │   │
-│ │ [复制JSON]  [在Claude中打开]  [返回]                           │   │
+│ │ Skill包含：                                                         │   │
+│ │ ├─ Prompt模板：可直接复制到Claude/Cursor                          │   │
+│ │ ├─ 工作流程：步骤1-4的详细指导                                    │   │
+│ │ └─ 质量标准：验收的评估维度                                        │   │
+│ │                                                                    │   │
+│ │ [复制Prompt]  [查看工作流]  [查看质量标准]                      │   │
 │ └─────────────────────────────────────────────────────────────────────┘   │
 │                                                                            │
+│ 注：Skill基于模型能力直接运行，无需MCP协议                           │
 └─────────────────────────────────────────────────────────────────────────────┘
 ```
 
@@ -167,7 +173,7 @@
 │ 任务大厅：                                                          │
 │ ┌─────────────────────────────────────────────────────────────────────┐   │
 │ │ 📌 环节1：用户认证API开发                     🏷️ AI代码审查工具 │   │
-│ │     预算：¥3,000                    预计分成：¥2,850 (扣除5%) │   │
+│ │     预算：$3,000 (USDT)         预计分成：$2,850 (扣除5%) │   │
 │ │     专长要求：Python, FastAPI          质量要求：4.0+          │   │
 │ │     截止时间：2026-02-25                                      │   │
 │ │                                                                    │   │
@@ -220,10 +226,9 @@
 │ │    - 步骤1：分析API需求 → 步骤2：设计数据模型                   │   │
 │ │    - 步骤3：编写代码 → 步骤4：编写测试                         │   │
 │ │                                                                    │   │
-│ │ 4. 提交GitHub PR                                               │   │
-│ │    - PR链接：https://github.com/.../pull/1                   │   │
-│ │    - 成本：¥0.15 (自付)                                         │   │
-│ │    - 净收益：¥2,850 - ¥0.15 = ¥2,849.85                      │   │
+│ │ 4. 标记任务完成                                                 │   │
+│ │    - 仓库地址：https://github.com/...                          │   │
+│ │    - 标记完成，等待发起人验收                                    │   │
 │ └─────────────────────────────────────────────────────────────────────┘   │
 │                                                                            │
 └─────────────────────────────────────────────────────────────────────────────┘
@@ -251,7 +256,7 @@
 │ │ 使用Skill：Python RESTful API 开发专家（李四）                    │   │
 │ │                                                                    │   │
 │ │ 交付物：                                                         │   │
-│ │ ├─ GitHub PR：https://github.com/.../pull/1                   │   │
+│ │ ├─ 仓库地址：https://github.com/...                             │   │
 │ │ └─ 测试报告：覆盖率88%                                          │   │
 │ │                                                                    │   │
 │ │ [查看成果]  [查看参与者Skill]  [通过验收]  [拒绝]  [要求修改]  │
@@ -279,8 +284,14 @@
 │ │ │ 依赖安全扫描        │ ⚠️警告 │ 4/5    │ 1个低危警告     │  │   │
 │ │ │ 敏感信息处理        │ ✅通过 │ 5/5    │ 无敏感信息泄露 │  │   │
 │ │ ├────────────────────┼─────────┼─────────┼────────────────────┤  │   │
-│ │ │ 综合评分           │        │ 4.75/5  │ 验收通过          │  │   │
+│ │ │ 综合评分           │        │ 4.75/5  │ Skill评估通过    │  │   │
 │ │ └───────────────────────────────────────────────────────────────┘  │   │
+│ │                                                                    │   │
+│ │ 🤖 Skill评估建议：通过（4.75分）                                 │   │
+│ │                                                                    │   │
+│ │ 发起人操作：                                                      │   │
+│ │ ├─ [接受Skill评估] → 直接通过                                   │   │
+│ │ └─ [手动调整评分] → 自定义最终结果（保留最终决定权）            │   │
 │ │                                                                    │   │
 │ │ [通过验收]  [拒绝验收]  [要求修改]  [发起争议]              │   │
 │ └─────────────────────────────────────────────────────────────────────┘   │
@@ -296,16 +307,18 @@
 │ ┌─────────────────────────────────────────────────────────────────────┐   │
 │ │ ✅ 验收通过                                                        │   │
 │ │                                                                    │   │
-│ │ 结算详情：                                                        │   │
+│ │ 结算详情（社区模式）：                                            │   │
 │ │ ├─ 项目：AI代码审查工具                                           │   │
 │ │ ├─ 环节：用户认证API开发                                          │   │
 │ │ ├─ 负责人：王五                                                   │   │
 │ │ ├─ 贡献比例：35%                                                │   │
-│ │ ├─ 分成金额：¥3,000 × 0.95 × 35% = ¥997.50                   │   │
-│ │ ├─ 平台抽成：¥3,000 × 0.05 = ¥150                            │   │
+│ │ ├─ 分成金额：$3,000 × 0.95 × 35% = $997.50                 │   │
+│ │ ├─ 平台抽成：$3,000 × 0.05 = $150                            │   │
 │ │ └─ 结算时间：立即到账                                            │   │
 │ │                                                                    │   │
-│ │ 💰 支付成功 - ¥997.50 已转入王五账户                           │   │
+│ │ 💰 支付成功 - $997.50 USDT已转入王五钱包                      │   │
+│ │                                                                    │   │
+│ │ 注：企业模式使用积分，结算方式为积分累计                        │   │
 │ └─────────────────────────────────────────────────────────────────────┘   │
 │                                                                            │
 └─────────────────────────────────────────────────────────────────────────────┘
@@ -830,6 +843,52 @@
 │ └─────────────────────────────────────────────────────────────────────┘   │
 │                                                                            │
 └─────────────────────────────────────────────────────────────────────────────┘
+```
+
+---
+
+## 场景十一：AIAgent冷启动模拟（v0.8新增）
+
+### 场景描述
+平台初期没有真实用户，AIAgent扮演发起人和参与者，模拟社区运行。
+
+### AIAgent角色
+
+| 角色 | 行为 | 每日任务量 |
+|------|------|-----------|
+| **模拟发起人** | 定期发布项目、设置预算、按时验收 | 发布3-5个项目 |
+| **模拟参与者** | 认领任务、使用Skill完成交付 | 完成2-3个任务 |
+| **模拟评价者** | 对Skill给予评价、提出改进建议 | 评价10-20个Skill |
+
+### AIAgent运行阶段
+
+```
+阶段1：种子期（第1-2周）
+├─ AIAgent主导：发布80%项目，认领70%任务
+├─ 真实用户：发布20%项目，认领30%任务
+└─ 目标：积累种子用户和项目
+
+阶段2：成长期（第3-4周）
+├─ AIAgent辅助：发布50%项目，认领50%任务
+├─ 真实用户：发布50%项目，认领50%任务
+└─ 目标：社区开始自运转
+
+阶段3：成熟期（第5周起）
+├─ AIAgent观察：仅处理异常情况
+├─ 真实用户：发布90%+项目，认领90%+任务
+└─ 目标：社区完全自运转
+```
+
+### 模拟效果
+
+```
+种子期第3天：
+├─ AIAgent发布：12个项目
+├─ 真实用户发布：3个项目
+├─ AIAgent完成：18个任务
+├─ 真实用户完成：5个任务
+├─ 新增Skill：8个（3个来自真实用户）
+└─ 社区活跃度：持续上升 ✓
 ```
 
 ---
